# EasyEditor

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  command_stack_test  mock_test  time_test
.github/workflows/: ci.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bindings.cpp
android/app/src/main/kotlin/com/videoeditor/app/: MainActivity.kt  VideoEditorApplication.kt
android/app/src/main/kotlin/com/videoeditor/app/engine/: NativeBridge.kt
android/app/src/main/kotlin/com/videoeditor/app/media/: ExportService.kt  LutPreset.kt  MediaCodecPlayer.kt  VideoPreviewEngine.kt
android/app/src/main/kotlin/com/videoeditor/app/ui/: AppRoot.kt  EditorScreen.kt  ExportSettingsSheet.kt  MediaCodecPreview.kt  MediaPool.kt  PreviewStage.kt  Timeline.kt  ToolsPanel.kt  UtilityShelf.kt  VideoFrameThumbnail.kt
android/app/src/main/kotlin/com/videoeditor/app/ui/theme/: Color.kt  Theme.kt
android/app/src/main/res/raw/: super8_daylight.cube  super8_daylight_sharp.cube  super8_night.cube
android/app/src/main/res/values/: styles.xml
android/gradle/: libs.versions.toml
core/: CMakeLists.txt  README.md
core/include/vx/: public_api.h  version.h
core/src/application/: project_service.cpp  project_service.h  render_graph.cpp  render_graph.h  scoped_texture.h
core/src/application/nodes/: lut_node.cpp  lut_node.h  render_node.h  sequence_node.cpp  sequence_node.h
core/src/domain/: clip.h  command.h  command_stack.cpp  command_stack.h  project.cpp  project.h  project_migration.cpp  project_migration.h  project_serialization_internal.h  rational.h  sequence.h  time.cpp  time.h
core/src/ffi/: exception_guard.h  init.cpp  project_ffi.cpp  version_ffi.cpp
core/src/platform/: i_codec_backend.h  i_gpu_backend.h
core/src/platform/android/: android_codec_backend.cpp  android_codec_backend.h
core/src/platform/gles/: gles_backend.cpp  gles_backend.h
core/src/platform/mock/: mock_codec_backend.h  mock_gpu_backend.cpp  mock_gpu_backend.h
core/src/platform/vulkan/: vulkan_backend.cpp  vulkan_backend.h
core/src/util/: error.h  log.cpp  log.h  uuid.cpp  uuid.h
core/tests/: CMakeLists.txt  command_stack_test.cpp  ffi_test.cpp  lut_node_test.cpp  mock_gpu_backend_test.cpp  project_test.cpp  render_graph_test.cpp  time_test.cpp
design-system/video-editor-app/: MASTER.md
docs/: TODO.md  architecture.md  build.md  coding-standards.md  color.md  ffi.md  threading.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-shared-cpp-core-with-native-ui.md  0003-android-first-then-ios.md  0004-gpu-backend-android.md  0005-rational-time.md  0006-clean-hexagonal-architecture.md  0007-color-management.md  0008-command-pattern-undo.md  0009-json-dependency.md  0010-immersive-studio-design.md  README.md
docs/archive/: TODO-Phase-0.md
docs/superpowers/plans/: 2026-04-26-fix-task-4-issues.md  2026-04-26-mvp-ui-implementation.md  2026-04-26-phase1-poc-implementation.md  2026-04-26-phase1-sequence-playback.md
docs/superpowers/specs/: 2026-04-26-mvp-ui-design.md  2026-04-26-phase1-poc-design.md  BRAINSTORMING_TASKS.md  BRAINSTORMING_TASKS_POC.md
